[gd_scene load_steps=9 format=2]

[ext_resource path="res://sreehari-menon-bg4mob-part-2.jpg" type="Texture" id=1]
[ext_resource path="res://Titania.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://turok.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/HightScore.gd" type="Script" id=4]
[ext_resource path="res://Script/ButtonScore/ButtonScore.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 58
font_data = ExtResource( 3 )

[node name="HightScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 638.94, 390.653 )
scale = Vector2( 1.19, 1.003 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.234
anchor_right = 0.766
anchor_bottom = 1.0
margin_left = 0.47998
margin_right = -0.480042
custom_constants/separation = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 680.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 680.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.0745098, 0.0745098, 1 )
text = "Hight Score"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 233.0
margin_right = 680.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 10 )

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 279.0
margin_right = 680.0
margin_bottom = 333.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
align = 1
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 369.0
margin_right = 680.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
align = 1
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 459.0
margin_right = 680.0
margin_bottom = 513.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
align = 1
valign = 1

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 549.0
margin_right = 680.0
margin_bottom = 603.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
align = 1
valign = 1

[node name="Label6" type="Label" parent="VBoxContainer"]
margin_top = 639.0
margin_right = 680.0
margin_bottom = 693.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
align = 1
valign = 1

[node name="ButtonScore" type="TextureButton" parent="."]
anchor_right = 0.123
anchor_bottom = 0.107
margin_right = 0.559998
margin_bottom = -0.17601
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ButtonScore"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonScore" to="ButtonScore" method="_on_ButtonScore_pressed"]
